--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "type": "commonjs",
   "description": "gerenciador-de-tarefas",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
